--- a/.github/ISSUE_TEMPLATE/bug-report.yml
+++ b/.github/ISSUE_TEMPLATE/bug-report.yml
@@ -16,15 +16,14 @@ body:
       required: true
   - type: textarea
     attributes:
+      id: reproduce
       label: Reproduce
-      description: "Steps to reproduce the behavior"
-      value: |
-        ## To Reproduce
+      description: Step by step to reproduce the bug
+      placeholder: |
         1. Go to '...'
         2. Click on '....'
         3. Scroll down to '....'
         4. See error
-      render: markdown
     validations:
       required: false
 
